on a flexible and high quality code base designed for small 
to medium-large businesses.
 
It features a simple interface, fully adaptable administration
and user experience, internationalization, platform and database 
abstraction, and endless possibilities for project expansion. 
--------------------

----- VERSION 2.5.6 (development) -----

2005-07-11, cfalonso
 Minor changes
    - zentrack_2/www/addSubmit.php 1.29
    - zentrack_2/www/behavior_js.php 1.31

2005-07-05, cfalonso
 Added ticket totals and paging info in listings
    - zentrack_2/includes/zenTrack.class 1.186
    - zentrack_2/includes/templates/listTickets.php 1.28

2005-07-04, cfalonso
  Added support for custom_multi field types (multiselect)
    - zentrack_2/includes/ZenFieldMap.class 1.20
    - zentrack_2/includes/ZenSessionManager.class 1.5
    - zentrack_2/includes/editCustomSubmit.php 1.9
    - zentrack_2/includes/parseVarfields.php 1.5
    - zentrack_2/includes/validateFields.php 1.4
    - zentrack_2/includes/zenTemplate.class 1.11
    - zentrack_2/includes/templates/editCustomsForm.php 1.10
    - zentrack_2/includes/templates/fieldMapForm.php 1.12
    - zentrack_2/www/addSubmit.php 1.28
    - zentrack_2/www/behavior_js.php 1.30

2005-05-24, cfalonso
  Included some new translations
    - zentrack_2/includes/ZenFieldMap.class 1.19
    - zentrack_2/includes/templates/ticket_logBox.php 1.19
    - zentrack_2/includes/templates/ticket_titleBox.php 1.14
    - zentrack_2/includes/translations/spanish.trans 1.9
    - zentrack_2/www/search.php 1.12

2005-05-23, cfalonso
  Include default_access of the user in evaluation for retaining the ticket's owner
    - zentrack_2/includes/zenTrack.class 1.185
  Fixed a bug that created a wrong page immediately after project creation
    - zentrack_2/includes/templates/projectView.php 1.5
    - zentrack_2/includes/templates/ticket_actionBar.php 1.13
    - zentrack_2/www/addProjectSubmit.php 1.22
    - zentrack_2/www/ticket.php 1.25 , 1.26

2005-05-19, cfalonso