@@ -13,6 +13,17 @@ abstraction, and endless possibilities for project expansion.
 
 ----- VERSION 2.5.6 (development) -----
 
+2005-07-12, cfalonso
+ Added field map functionality for the custom tab
+ (IMPORTANT: ticket_custom and project_custom views
+  must be loaded in fieldmap table, including id field)
+    - zentrack_2/includes/editCustomSubmit.php 1.10
+    - zentrack_2/includes/templates/newTicketForm.php 1.44
+    - zentrack_2/includes/templates/ticket_customBox.php 1.10
+    - zentrack_2/www/actions/editCustomSubmit.php 1.3
+ Minor change in spanish translation
+    - zentrack_2/includes/translations/spanish.trans 1.10
+
 2005-07-11, cfalonso
  Minor changes
     - zentrack_2/www/addSubmit.php 1.29
